# ezMIgrations

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  PLAN.md  README.md  app.py  config.yaml  config_manager.py  index.html  main.py  migration_squasher.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: release.yml
classes/: StoreProcedure.py
docs/: QUICK_REFERENCE.md  README_SQUASHING.md
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  dotnet.rs  git.rs  lib.rs  main.rs  parser.rs  process.rs  state.rs
tests/: __init__.py  test_edge_cases.py  test_migration_squashing.py
tests/fixtures/: 20240103000000_migration3_create_second_procedure.cs  20240104000000_rejectTypeMigration.cs  README.md  migration1_create_procedure.cs  migration2_alter_procedure.cs
