[package]
name = "ez-migrations"
version = "0.5.0"
description = "A lightweight Tauri app for managing .NET EF Core migrations"
authors = ["ezMigrations"]
edition = "2021"

[lib]
name = "ez_migrations_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
notify = "6"
tauri-plugin-dialog = "2.6.0"
tokio = { version = "1", features = ["rt"] }
